--- a/okteto-stack.yaml
+++ b/okteto-stack.yaml
@@ -1,13 +1,99 @@
 services:
-  fastapi:
-    build: .
-    ports:
-      - 8080:8080
+  postgres:
+    image: postgres:13.2
+    restart: unless-stopped
     environment:
-      - DB_HOST=${HOST}
+      POSTGRES_DB: keycloak
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: keycloak
+  keycloak:
+    depends_on:
+      - postgres
+    environment:
+      DB_VENDOR: postgres
+      DB_ADDR: postgres
+      DB_DATABASE: keycloak
+      DB_USER: keycloak
+      DB_PASSWORD: keycloak
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+      KEYCLOAK_USER: admin
+      KEYCLOAK_PASSWORD: admin
+      PROXY_ADDRESS_FORWARDING: true
+    image: jboss/keycloak
+    ports:
+      - "8080:8080"
+    restart: unless-stopped
+  # Reference: https://blog.jarrousse.org/2022/04/26/using-docker-compose-in-to-deploy-rocket-chat/
+  rocketchat:
+    container_name: rocketchat
+    image: rocket.chat:latest
+    restart: unless-stopped
+    environment:
+      - PORT=3000
+      - MONGO_URL=mongodb://mongodb:27017/rocketchat
+      - MONGO_OPLOG_URL=mongodb://mongodb:27017/local
+    depends_on:
+      - mongodb
+    ports:
+      - 3000:3000
+  # this container's job is just run the command to initialize the replica set.
+  # it will run the command and remove himself (it will not stay running)
+  mongo-init-replica:
+    image: mongo:latest
+    command: >
+      bash -c
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        "for i in `seq 1 30`; do
+            msg=$$(mongosh mongo/rocketchat --quiet --eval \"
+            rs.initiate({
+              _id: 'rs0',
+              members: [ { _id: 0, host: 'mongodb:27017' } ]})\" 2>&1)
+            s=$$?
+            if [ \"$$s\" -eq 0 ]; then
+              break
+            fi
+            if [[ \"$$msg\" == \"MongoServerError: already initialized\" ]] ; then
+              echo $$msg
+              break
+            fi
+          echo \"Tried $$i times. Waiting 5 secs...\";
+          sleep 5;
+        done; (exit 0)"
+    depends_on:
+      - mongodb
   mongodb:
     image: mongo:latest
+    restart: unless-stopped
+    volumes:
+      - ./data/db:/data/db
     ports:
       - 27017
-    volumes:
-      - /bitnami/mongodb
+    command: mongod --oplogSize 128 --replSet rs0
+    labels:
+      - "traefik.enable=false"
